Add support for the NLST command